fix(archives): avatar be covered

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -20065,6 +20065,7 @@ main {
 }
 
 #archives .items .content .avatar {
+    position: relative;
     height: 24px;
     width: 24px;
     margin-top: -12px;
